[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/testSprites/icon.png" type="Texture" id=1]
[ext_resource path="res://assets/scripts/titleScreen.gd" type="Script" id=2]
[ext_resource path="res://resources/BitPotion.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/BigFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/fonts/catCommando.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/sprites/Star.png" type="Texture" id=6]
[ext_resource path="res://assets/animations/titleScreenBeginning.tres" type="Animation" id=7]
[ext_resource path="res://assets/sprites/StarBackground2.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 250
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("star:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MachoCoots:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="titleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
starSpeed = -50

[node name="Coots" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -338.5
margin_top = -400.0
margin_right = 338.5
margin_bottom = -43.0001
custom_fonts/font = SubResource( 1 )
text = "COOTS"
align = 1

[node name="catCommando" type="RichTextLabel" parent="."]
margin_left = 396.0
margin_top = 1250.0
margin_right = 1726.0
margin_bottom = 1496.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = "[wave amp = 1 ][color=red]C[/color][color=yellow]A[/color][color=lime]T[/color] [color=blue]C[/color][color=fuchsia]O[/color][color=white]M[/color][color=purple]M[/color][color=yellow]A[/color][color=red]N[/color][color=aqua]D[/color][color=lime]O[/color]"
text = "CAT COMMANDO"

[node name="ButtonHolder" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = 78.0
margin_right = 230.0
margin_bottom = 254.0
custom_constants/separation = 50

[node name="Play" type="Button" parent="ButtonHolder"]
margin_right = 460.0
margin_bottom = 86.0
custom_fonts/font = ExtResource( 4 )
text = "Play"

[node name="I don\'t know" type="Button" parent="ButtonHolder"]
margin_top = 136.0
margin_right = 460.0
margin_bottom = 222.0
custom_fonts/font = ExtResource( 4 )
text = "Another Button"

[node name="MachoCoots" type="TextureRect" parent="."]
margin_left = 1615.0
margin_top = 770.0
margin_right = 1679.0
margin_bottom = 834.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="MachoCoots"]
margin_left = -6.75
margin_top = 26.75
margin_right = 73.25
margin_bottom = 40.75
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 3 )
text = "Macho Coots Here"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/titleScreenBeginning = ExtResource( 7 )

[node name="star" type="Sprite" parent="."]
visible = false
position = Vector2( 932, 523 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 6 )

[node name="StarBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="StarBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="StarGround" type="ParallaxLayer" parent="StarBackground"]
visible = false
motion_mirroring = Vector2( 0, 1080 )

[node name="Sprite" type="Sprite" parent="StarBackground/StarGround"]
position = Vector2( 960, 540 )
texture = ExtResource( 8 )

[connection signal="pressed" from="ButtonHolder/Play" to="." method="_on_Play_pressed"]
